# CLRInstrumentationEngine

./: .editorconfig  .editorconfig.inferred  .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DESIGN-NOTES.md  Init.ps1  Instrumentation Engine SDK EULA.rtf  InstrumentationEngine.sln  LICENSE  NativeNuGetRestore.sln  NuGet.config  NuGet.internal.config  README.md  ROADMAP.md  SECURITY.md  after.InstrumentationEngine.sln.targets  build.ps1  init.cmd  verifyCopyrightHeaders.ps1
src/: CMakeLists.txt  InstrumentationEngine.Packages.sln  build.sh
src/Common.Headers/: Common.Headers.vcxitems  CriticalSectionHolder.h  InitOnce.h  SafeFindFileHandle.h  Singleton.h  StringUtils.h  tstring.h
src/Common.Lib/: CMakeLists.txt  Common.Lib.vcxproj  CriticalSectionHolder.h  EventLoggingBase.cpp  EventLoggingBase.h  InitOnce.h  Macros.h  ModuleHandle.cpp  ModuleHandle.h  ModuleUtils.cpp  ModuleUtils.h  PathUtils.cpp  PathUtils.h  SafeFindFileHandle.h  Singleton.h  StringUtils.cpp  StringUtils.h  XmlDocWrapper.cpp  XmlDocWrapper.h  XmlNode.cpp  XmlNode.h  banned.h  iids.cpp  refcount.cpp  refcount.h  stdafx.h  systemstring.cpp  systemstring.h  tstring.h
src/Dependencies/: LegacyDependencies.csproj  NativeDependencies.csproj  NativeTestDependencies.csproj  WixDependencies.csproj
src/Extensions.Base/: Extensions.Base.filters  Extensions.Base.vcxproj  HostExtension.cpp  HostExtension.def  HostExtension.h  HostExtension.idl  HostExtensionExport.cpp  dllmain.cpp  dllmain.h  stdafx.cpp  stdafx.h
src/Extensions.Base.Api/: AssemblyInfo.cs  BeginCallbacks.cs  BeginCallbacks.tt  EndCallbacks.cs  EndCallbacks.tt  ExceptionCallbacks.cs  ExceptionCallbacks.tt  Extensions.Base.Api.csproj  NativeMethods.cs  PublicContract.cs  PublicContract.tt
src/Extensions.Base.Api.Tests/: AssemblyInfo.cs  Extensions.Base.Api.Tests.csproj  ExtensionsBaseCallbacks.cs  ExtensionsBaseLimitations.cs
src/Extensions.BaseLib/: AssemblyInfo.h  CallbacksEmitter.cpp  CallbacksEmitter.h  DecorationCallbacksInfoReader.cpp  Extensions.BaseLib.vcxproj  HostExtensionBase.cpp  HostExtensionBase.h  MethodInfoDataContainerAdatpter.cpp  MethodRecord.cpp  ModuleMetaDataLoader.cpp  ModuleMetaDataLoader.h  stdafx.cpp  stdafx.h
src/ExtensionsCommon/: AgentTls.h  AgentTrace.h  AgentValidation.h  CMakeLists.txt  CrtDiagnostics.cpp  CrtDiagnostics.h  DataContainerAdapter.cpp  DataContainerAdapter.h  DataItemContainer.cpp  DataItemContainer.h  DecorationCallbackInfo.cpp  DecorationCallbackInfo.h  DecorationCallbackRefInfo.h  DecorationCallbacksInfo.cpp  DecorationCallbacksInfo.h  DecorationCallbacksInfoReader.cpp  DecorationCallbacksInfoReader.h  DecorationCallbacksInfoStaticReader.cpp  DecorationCallbacksInfoStaticReader.h  Environment.cpp  Environment.h  Exception.cpp  Exception.h  ExtensionsCommon.vcxproj  FormatMessage.h  ICodeInjector.h  ICodeInjectorFwd.h  INativeMethodsStubs.h  InstructionDefineExtensions.h  InstrumentationEngineDefs.h  InstrumentationEngineInfraPointerDefs.h  InstrumentationEnginePointerDefs.h  InstrumentationMethodBase.cpp  InstrumentationMethodBase.h  InstrumentationMethodExceptionsImplT.h  InstrumentationMethodUtils.h  InteropHelpers.h  InteropInstrumentationHandler.cpp  InteropInstrumentationHandler.h  LoadArgumentsHelper.cpp  (+37 more)
src/ExtensionsHost/: CExtensionsHost.cpp  CExtensionsHost.h  ExtensionsHost.cpp  ExtensionsHost.def  ExtensionsHost.idl  ExtensionsHost.vcxproj  ExtensionsHostps.def  dllmain.cpp  dllmain.h  stdafx.cpp
src/ExtensionsHostCrossPlat/: CExtensionsHost.cpp  CExtensionsHost.h  CMakeLists.txt  ImplQueryInterface.cpp  ImplQueryInterface.h  dllmain.cpp  refcount.cpp  refcount.h  stdafx.cpp  stdafx.h
src/ExtensionsHostLib/: CExtensionsHost.cpp  CExtensionsHost.h  CMakeLists.txt  ExtensionsHostLib.vcxproj  RawProfilerHookLoader.cpp  RawProfilerHookLoader.h  RawProfilerHookSettingsReader.cpp  RawProfilerHookSettingsReader.h  SafeFindFileHandle.h  stdafx.cpp  stdafx.h
src/InstrumentationEngine.Api/: CMakeLists.txt  InstrumentationEngine.Api.vcxproj  InstrumentationEngine.h  InstrumentationEngine.idl  InstrumentationEngine_api.cpp  InstrumentationEngine_i.cpp  targetver.h
src/InstrumentationEngine.Attach/: AssemblyInfo.cs  CommonTypes.xsd  EngineConfiguration.cs  EngineConfiguration.xsd  InstrumentationConfigurationSources.cs  InstrumentationConfigurationSources.xsd  InstrumentationEngine.Attach.csproj  NativeMethods.cs  Program.cs
src/InstrumentationEngine.Installer/: version.txt
src/InstrumentationEngine.Installer.NuGet/: InstrumentationEngine.Installer.NuGet.csproj  InstrumentationEngine.Installer.nuspec
src/InstrumentationEngine.Lib/: CMakeLists.txt  ConfigurationLoader.cpp  ConfigurationLoader.h  ConfigurationLocator.cpp  ConfigurationLocator.h  ConfigurationSource.cpp  ConfigurationSource.h  CriticalSectionHolder.h  DataContainer.cpp  DataContainer.h  DebugLoggerSink.cpp  DebugLoggerSink.h  Encoding.cpp  Encoding.h  EnumeratorImpl.h  EventLoggerSink.cpp  EventLoggerSink.h  EventLoggingBase.cpp  EventLoggingBase.h  File.h  FileLoggerSink.cpp  FileLoggerSink.h  HostLoggerSink.cpp  HostLoggerSink.h  ImplQueryInterface.cpp  ImplQueryInterface.h  InitOnce.h  InstrumentationEngine.Lib.vcxproj  InstrumentationEngineFeatures.h  InstrumentationMethod.cpp  InstrumentationMethod.h  InstrumentationMethodAttachContext.cpp  InstrumentationMethodAttachContext.h  InstrumentationMethodSetting.cpp  InstrumentationMethodSetting.h  LoggerService.cpp  LoggerService.h  LoggerSink.h  LoggerSinkProvider.cpp  LoggerSinkProvider.h  (+28 more)
src/InstrumentationEngine.Method/: CMakeLists.txt  InstrumentationEngine.Method.vcxproj  InstrumentationEngineDefs.h  InstrumentationMethodBase.h  build.sh  dllmain.cpp  resource.h  stdafx.cpp  stdafx.h
src/InstrumentationEngine.NuGet/: InstrumentationEngine.Nuget.csproj  InstrumentationEngine.nuspec  install.ps1
src/InstrumentationEngine.NuGet.Headers/: InstrumentationEngine.Headers.ARM64.nuspec  InstrumentationEngine.Headers.nuspec  InstrumentationEngine.Nuget.Headers.csproj
src/InstrumentationEngine.Preinstall/: InstrumentationEngine.Preinstall.csproj  (+3 more)
(+777 files in other folders)
